Add jre runtime flag to enable cgroups memory limit
Signed-off-by: Arunprasad Rajkumar <ar.arunprasad@gmail.com>